fixing alignment in homepage to improve mobile style

--- a/style/homepage.css
+++ b/style/homepage.css
@@ -226,14 +226,14 @@ nav ul li a:hover {
 .hello {
     color: white;
     font-weight: 800;
-    margin-top: 100px;
+    margin-top: .5%;
 }
 .name {
     color: white;
 }
 .me_image {
     width: 20%;
-    margin-top: 100px;
+    margin-top: 3%;
     height: auto; 
     margin-right: 20px; 
 }
@@ -241,7 +241,7 @@ nav ul li a:hover {
 /* ------------------------------------------------------------------- */
 .msg_div {
     width: 25%;
-    padding: 20px;
+    padding: .5%;
     text-align: center;
     position: absolute;
     line-height: 1.5;
